# EasyFind

./: LICENSE  README.md  pyproject.toml
src/pdfgrepui/: __init__.py  app.py  cache.py  indexer.py  models.py  renderer.py  search.py
