[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfgrepui"
version = "0.1.0"
description = "Terminal UI for searching PDFs with previews"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "textual>=0.59.0",
  "textual-image>=0.7.0",
  "rich>=13.0.0",
]

[project.scripts]
pdfgrepui = "pdfgrepui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
